Add benchmarks index

--- a/benchmark-results/2.0.0.md
+++ b/benchmark-results/2.0.0.md
@@ -5,7 +5,9 @@
 
 ## System
 
-- CPU: Ryzen 3600
+- OS: Ubuntu 20.04.2 LTS x86_64
+- Kernel: 5.4.0-54-generic
+- CPU: AMD Ryzen 5 3600 (12) @ 3.600GH
 - RAM: 32GB DDR4 3200MHz
 
 ## Raw results
